Refactor content in origen.html to enhance the description of Fanetix and its purpose for music fans.

--- a/html/origen.html
+++ b/html/origen.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="icon" type="image/png" href="../imagenes/logo.png">
     <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/aileron" type="text/css" />
-    <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/now" type="text/css"/>
-    <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/youngserif" type="text/css"/>
+    <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/now" type="text/css" />
+    <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/youngserif" type="text/css" />
 
 </head>
 
@@ -33,17 +33,20 @@
 
     <main>
         <img src="../imagenes/origen.png" alt="Origen y Contextualización">
-        <p>La idea de Fanetix nació al identificar una necesidad clara entre los fans de la música: un espacio exclusivo
-            donde pudieran comprar y vender merchandising de sus artistas favoritos, estar al tanto de sus conciertos y
-            conocer más sobre ellos en un solo lugar.</p>
-        <p> Muchas plataformas ofrecen una parte de esta experiencia, pero ninguna las reúne de manera especializada.
-            Los fans suelen depender de múltiples sitios para conseguir merch, enterarse de giras o descubrir
-            curiosidades sobre sus ídolos. Fanetix viene a cambiar eso.</p>
-        <p>Nuestra aplicación fue concebida como un punto de encuentro para la comunidad musical, donde los seguidores
-            puedan no solo adquirir productos exclusivos, sino también estar siempre informados sobre los eventos y
-            novedades de sus artistas preferidos.</p>
-        <p>Con Fanetix, queremos hacer que la experiencia de ser fan sea más accesible, emocionante e interactiva que
-            nunca.</p>
+        <p>Fanetix no es solo una idea. Es una revolución necesaria.
+            Nació al detectar una carencia inaceptable en el mundo de los fans de la música: la ausencia de un espacio
+            único, exclusivo y completamente dedicado a ellos. Hoy en día, los seguidores tienen que navegar por un mar
+            de plataformas dispersas para conseguir merchandising, seguir las giras o conectar con la esencia de sus
+            artistas. Eso tiene que acabar. Y Fanetix es la solución.</p>
+        <p> Mientras otras plataformas ofrecen migajas de lo que un fan realmente necesita, Fanetix lo integra todo en
+            una sola experiencia épica. Es mucho más que una app: es el hogar definitivo para la comunidad musical,
+            donde los fans no solo compran y venden productos únicos, sino que se mantienen al día de cada concierto,
+            lanzamiento y detalle íntimo de sus ídolos.</p>
+        <p>En un mundo saturado de información y opciones desconectadas, Fanetix se impone como la única plataforma que
+            entiende de verdad lo que significa ser fan. Queremos hacer de la pasión algo aún más accesible, vibrante y
+            conectado.</p>
+        <p>Porque ser fan no es un pasatiempo: es una forma de vida. Y Fanetix es la herramienta imprescindible para
+            vivirla al máximo.</p>
     </main>
 
     <footer>
